--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Student Laptop Application 2025</h1>
 
-        <form id="application-form" data-netlify="true" method="POST" action="/success">
+        <form name="contact" netlify id="application-form" data-netlify="true" method="POST" action="/success">
             <label for="full-names">Full Names:</label>
             <input type="text" id="full-names" name="full-names" placeholder="Thabo Mbeki" required>
 
